--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,8 +2,10 @@
 FROM node:18-alpine AS build
 WORKDIR /app
 COPY package*.json ./
-RUN npm install --legacy-peer-deps
+RUN npm install react-scripts@5.0.1 --legacy-peer-deps
 COPY . .
+# Əlavə sətir – react-scripts icazəsini düzəldir
+RUN chmod +x node_modules/.bin/react-scripts
 RUN npm run build
 
 # ---------- Run stage ----------
@@ -13,3 +15,4 @@ RUN npm install -g serve
 COPY --from=build /app/build ./build
 EXPOSE 3000
 CMD ["serve", "-s", "build", "-l", "3000"]
+
