--- a/nginx.conf
+++ b/nginx.conf
@@ -1,29 +1,40 @@
 events { }
 
 http {
-upstream backend_servers {
-    server backend1:3001 max_fails=3 fail_timeout=10s;
-    server backend2:3002 max_fails=3 fail_timeout=10s;
-    server backend3:3003 max_fails=3 fail_timeout=10s;
-}
+  upstream backend_servers {
+      server backend1:3001 max_fails=3 fail_timeout=10s;
+      server backend2:3002 max_fails=3 fail_timeout=10s;
+      server backend3:3003 max_fails=3 fail_timeout=10s;
+  }
 
   server {
     listen 80;
 
-location /api/ {
-    proxy_pass http://backend_servers/;
-    proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
-    proxy_connect_timeout 3s;
-    proxy_read_timeout 5s;
-    proxy_send_timeout 5s;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-}
+    # Route /api/* → backend load balancer
+    location /api/ {
+        proxy_pass http://backend_servers/;
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+        proxy_connect_timeout 3s;
+        proxy_read_timeout 5s;
+        proxy_send_timeout 5s;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
+    # Route /test → backend load balancer (for round-robin testing)
+    location /test {
+        proxy_pass http://backend_servers/test;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    # Default route → frontend
     location / {
-      proxy_pass http://frontend:3000;
+        proxy_pass http://frontend:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
   }
 }
