--- a/nginx.conf
+++ b/nginx.conf
@@ -1,84 +1,84 @@
-events { }
+events {}
 
 http {
-  # Enable gzip compression for performance
+  # ---------- Gzip Optimization ----------
   gzip on;
-  gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
-  gzip_min_length 256;
   gzip_vary on;
+  gzip_min_length 256;
+  gzip_proxied any;
+  gzip_comp_level 5;
+  gzip_types
+    text/plain
+    text/css
+    application/json
+    application/javascript
+    application/x-javascript
+    text/xml
+    application/xml
+    application/xml+rss
+    text/javascript
+    image/svg+xml;
 
-  # Define upstream backend pool (load balancing)
+  # ---------- Upstream Backends ----------
   upstream backend_servers {
       server backend1:3001 max_fails=3 fail_timeout=10s;
       server backend2:3002 max_fails=3 fail_timeout=10s;
       server backend3:3003 max_fails=3 fail_timeout=10s;
-
-      # Optional: if all fail, Nginx retries round-robin style
       keepalive 32;
   }
 
   server {
     listen 80;
+    server_name _;
 
-    # -------------------------------
-    # 1. Nginx Health Check Route
-    # -------------------------------
+    # ---------- Health Check ----------
     location /health {
         return 200 "Nginx is healthy\n";
         add_header Content-Type text/plain;
     }
 
-    # ---------------------------------
-    # 2. Backend API Load Balancing
-    # ---------------------------------
+    # ---------- API Load Balancing ----------
     location /api/ {
         proxy_pass http://backend_servers/;
         proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
         proxy_connect_timeout 3s;
-        proxy_read_timeout 5s;
-        proxy_send_timeout 5s;
+        proxy_read_timeout 10s;
+        proxy_send_timeout 10s;
 
-        # Headers
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # Retry logic for failed requests
         proxy_intercept_errors on;
         error_page 502 503 504 = @backend_fallback;
     }
 
-    # ----------------------------
-    # 3. Round-Robin Test Route
-    # ----------------------------
+    # ---------- Static Frontend ----------
+    location / {
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ /index.html;
+    }
+
+    # ---------- Cache Static Assets ----------
+    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot)$ {
+        root /usr/share/nginx/html;
+        expires 30d;
+        add_header Cache-Control "public";
+        access_log off;
+    }
+
+    # ---------- Backend Fallback ----------
+    location @backend_fallback {
+        return 502 "All backend servers are currently unavailable.\n";
+    }
+
+    # ---------- Optional Round-Robin Test ----------
     location /test {
         proxy_pass http://backend_servers/test;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    # --------------------------------
-    # 4. Static Frontend (React App)
-    # --------------------------------
-    location / {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-
-        # Cache static assets for 30 days
-        location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg)$ {
-            expires 30d;
-            access_log off;
-            add_header Cache-Control "public";
-        }
-    }
-
-    # ------------------------------
-    # 5. Backend Fallback Handler
-    # ------------------------------
-    location @backend_fallback {
-        return 502 "All backend servers are currently unavailable.\n";
     }
   }
 }
