Refactor Nginx configuration for new endpoints
Removed gzip optimization and upstream backend configuration. Updated server to listen on port 808 and modified API and test locations to proxy to new endpoints.

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,6 @@
 events {}
 
 http {
-  # ---------- Gzip Optimization ----------
   gzip on;
   gzip_vary on;
   gzip_min_length 256;
@@ -19,66 +18,32 @@ http {
     text/javascript
     image/svg+xml;
 
-  # ---------- Upstream Backends ----------
-  upstream backend_servers {
-      server backend1:3001 max_fails=3 fail_timeout=10s;
-      server backend2:3002 max_fails=3 fail_timeout=10s;
-      server backend3:3003 max_fails=3 fail_timeout=10s;
-      keepalive 32;
-  }
-
   server {
-    listen 80;
+    listen 808;
     server_name _;
 
-    # ---------- Health Check ----------
+    # 🔹 Health check
     location /health {
         return 200 "Nginx is healthy\n";
         add_header Content-Type text/plain;
     }
 
-    # ---------- API Load Balancing ----------
+    # 🔹 Backend yönləndirməsi (API requests)
     location /api/ {
-        proxy_pass http://backend_servers/;
-        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
-        proxy_connect_timeout 3s;
-        proxy_read_timeout 10s;
-        proxy_send_timeout 10s;
-
+        proxy_pass https://ufaz-slay-meter.onrender.com/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_intercept_errors on;
-        error_page 502 503 504 = @backend_fallback;
     }
 
-    # ---------- Static Frontend ----------
+    # 🔹 Frontend yönləndirməsi (Vite/React)
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html;
-    }
-
-    # ---------- Cache Static Assets ----------
-    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot)$ {
-        root /usr/share/nginx/html;
-        expires 30d;
-        add_header Cache-Control "public";
-        access_log off;
-    }
-
-    # ---------- Backend Fallback ----------
-    location @backend_fallback {
-        return 502 "All backend servers are currently unavailable.\n";
-    }
-
-    # ---------- Optional Round-Robin Test ----------
-    location /test {
-        proxy_pass http://backend_servers/test;
+        proxy_pass https://ufaz-slay-meter-1.onrender.com/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
   }
 }
