--- a/nginx.conf
+++ b/nginx.conf
@@ -1,47 +1,46 @@
-http {
-  gzip on;
-  gzip_vary on;
-  gzip_min_length 256;
-  gzip_proxied any;
-  gzip_comp_level 5;
-  gzip_types
-    text/plain
-    text/css
-    application/json
-    application/javascript
-    application/x-javascript
-    text/xml
-    application/xml
-    application/xml+rss
-    text/javascript
-    image/svg+xml;
+# ---------- Gzip Optimization ----------
+gzip on;
+gzip_vary on;
+gzip_min_length 256;
+gzip_proxied any;
+gzip_comp_level 5;
+gzip_types
+  text/plain
+  text/css
+  application/json
+  application/javascript
+  application/x-javascript
+  text/xml
+  application/xml
+  application/xml+rss
+  text/javascript
+  image/svg+xml;
 
-  server {
-    listen 808;
-    server_name _;
+server {
+  listen 808;
+  server_name _;
 
-    # 🔹 Health check
-    location /health {
-        return 200 "Nginx is healthy\n";
-        add_header Content-Type text/plain;
-    }
+  # ---------- Health Check ----------
+  location /health {
+      return 200 "Nginx is healthy\n";
+      add_header Content-Type text/plain;
+  }
 
-    # 🔹 Backend yönləndirməsi (API requests)
-    location /api/ {
-        proxy_pass https://ufaz-slay-meter.onrender.com/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+  # ---------- API Proxy ----------
+  location /api/ {
+      proxy_pass https://ufaz-slay-meter.onrender.com/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+  }
 
-    # 🔹 Frontend yönləndirməsi (Vite/React)
-    location / {
-        proxy_pass https://ufaz-slay-meter-1.onrender.com/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+  # ---------- Frontend Proxy ----------
+  location / {
+      proxy_pass https://ufaz-slay-meter-1.onrender.com/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
   }
 }
