--- a/nginx.conf
+++ b/nginx.conf
@@ -28,7 +28,7 @@ server {
 
   # ---------- API Proxy ----------
   location /api/ {
-      proxy_pass https://ufaz-slay-meter.onrender.com/;
+      proxy_pass http://ufaz-slay-meter.onrender.com/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -37,7 +37,7 @@ server {
 
   # ---------- Frontend Proxy ----------
   location / {
-      proxy_pass https://ufaz-slay-meter-1.onrender.com/;
+      proxy_pass http://ufaz-slay-meter-1.onrender.com/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
