--- a/nginx.conf
+++ b/nginx.conf
@@ -27,13 +27,20 @@ server {
   }
 
   # ---------- API Proxy ----------
-  location /api/ {
-      proxy_pass http://ufaz-slay-meter.onrender.com/;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-  }
+location /api/ {
+    # Render backend servisin HTTPS üzərindən çağırılması
+    proxy_pass https://ufaz-slay-meter.onrender.com/;
+
+    proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+    proxy_connect_timeout 5s;
+    proxy_read_timeout 10s;
+    proxy_send_timeout 10s;
+
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+}
 
   # ---------- Frontend Proxy ----------
   location / {
