--- a/nginx.conf
+++ b/nginx.conf
@@ -26,28 +26,32 @@ server {
       add_header Content-Type text/plain;
   }
 
-  # ---------- API Proxy ----------
-location /api/ {
-    # Render backend servisin HTTPS üzərindən çağırılması
-    proxy_pass https://ufaz-slay-meter.onrender.com/;
+  # ---------- API Proxy (Backend yönləndirmə) ----------
+  location /api/ {
+      proxy_pass https://ufaz-slay-meter.onrender.com/;  # Backend Render URL
+      proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+      proxy_connect_timeout 5s;
+      proxy_read_timeout 10s;
+      proxy_send_timeout 10s;
 
-    proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
-    proxy_connect_timeout 5s;
-    proxy_read_timeout 10s;
-    proxy_send_timeout 10s;
-
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-}
-
-  # ---------- Frontend Proxy ----------
-  location / {
-      proxy_pass http://ufaz-slay-meter-1.onrender.com/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  # ---------- Frontend Static Serving ----------
+  location / {
+      root /usr/share/nginx/html;
+      index index.html;
+      try_files $uri $uri/ /index.html;
+  }
+
+  # ---------- Cache Static Assets ----------
+  location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot)$ {
+      root /usr/share/nginx/html;
+      expires 30d;
+      add_header Cache-Control "public";
+      access_log off;
   }
 }
