--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,16 +28,12 @@ server {
 
   # ---------- API Proxy (Backend yönləndirmə) ----------
   location /api/ {
-      proxy_pass https://ufaz-slay-meter.onrender.com/;  # Backend Render URL
-      proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
-      proxy_connect_timeout 5s;
-      proxy_read_timeout 10s;
-      proxy_send_timeout 10s;
-
+      proxy_pass http://localhost:5000/;  # Backend eyni konteynerdə işləyir
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
       proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_cache_bypass $http_upgrade;
   }
 
   # ---------- Frontend Static Serving ----------
