--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,42 +1,57 @@
-# ---------- Gzip Optimization ----------
+# ---------- Gzip Compression ----------
 gzip on;
 gzip_vary on;
-gzip_min_length 256;
+gzip_min_length 512;
 gzip_proxied any;
-gzip_comp_level 5;
+gzip_comp_level 6;
 gzip_types
   text/plain
   text/css
   application/json
   application/javascript
-  application/x-javascript
   text/xml
   application/xml
   application/xml+rss
   text/javascript
   image/svg+xml;
 
+# ---------- Main Server ----------
 server {
   listen 808;
   server_name _;
 
   # ---------- Health Check ----------
   location /health {
-      return 200 "Nginx is healthy\n";
+      return 200 "Nginx is healthy \n";
       add_header Content-Type text/plain;
   }
 
-  # ---------- API Proxy (Backend yönləndirmə) ----------
+  # ---------- Backend API Proxy ----------
   location /api/ {
-      proxy_pass http://localhost:5000/;  # Backend eyni konteynerdə işləyir
+      proxy_pass http://localhost:5000/;   # Backend runs in same container
       proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection 'upgrade';
+
+      # Keep connections alive and stable
+      proxy_set_header Connection "";
       proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
+      # Allow WebSockets & streaming
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+
+      # Better timeout & error handling
+      proxy_read_timeout 60s;
+      proxy_connect_timeout 10s;
+      proxy_send_timeout 30s;
+
+      # Disable caching for API responses
       proxy_cache_bypass $http_upgrade;
   }
 
-  # ---------- Frontend Static Serving ----------
+  # ---------- React Frontend ----------
   location / {
       root /usr/share/nginx/html;
       index index.html;
@@ -44,10 +59,19 @@ server {
   }
 
   # ---------- Cache Static Assets ----------
-  location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot)$ {
+  location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot|mp4|webm)$ {
       root /usr/share/nginx/html;
       expires 30d;
-      add_header Cache-Control "public";
+      add_header Cache-Control "public, immutable";
       access_log off;
   }
+
+  # ---------- Security Headers ----------
+  add_header X-Content-Type-Options nosniff;
+  add_header X-Frame-Options SAMEORIGIN;
+  add_header X-XSS-Protection "1; mode=block";
+
+  # ---------- Error Pages ----------
+  error_page 404 /index.html;
+  error_page 502 503 504 /50x.html;
 }
