--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,38 +1,45 @@
-# Health check
-location /health {
-    return 200 "Nginx is healthy ✅\n";
-    add_header Content-Type text/plain;
-}
+server {
+  listen 808;
+  server_name _;
 
-# Proxy all API requests to backend
-location /api/ {
-    proxy_pass http://127.0.0.1:5000/;
-    proxy_http_version 1.1;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_cache_bypass $http_upgrade;
-}
+  # ---------- Health Check ----------
+  location /health {
+      return 200 "Nginx is healthy ✅\n";
+      add_header Content-Type text/plain;
+  }
 
-# Serve React build
-location / {
-    root /usr/share/nginx/html;
-    index index.html;
-    try_files $uri $uri/ /index.html;
-}
+  # ---------- API Proxy (Backend yönləndirmə) ----------
+  location /api/ {
+      proxy_pass http://127.0.0.1:5000/;
+      proxy_http_version 1.1;
 
-# Cache static files
-location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot|webm|mp4)$ {
-    root /usr/share/nginx/html;
-    expires 30d;
-    add_header Cache-Control "public, immutable";
-    access_log off;
-}
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
 
-# Security headers
-add_header X-Content-Type-Options nosniff;
-add_header X-Frame-Options SAMEORIGIN;
-add_header X-XSS-Protection "1; mode=block";
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_cache_bypass $http_upgrade;
+  }
+
+  # ---------- Frontend Static Serving ----------
+  location / {
+      root /usr/share/nginx/html;
+      index index.html;
+      try_files $uri $uri/ /index.html;
+  }
+
+  # ---------- Cache Static Assets ----------
+  location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot|webm|mp4)$ {
+      root /usr/share/nginx/html;
+      expires 30d;
+      add_header Cache-Control "public, immutable";
+      access_log off;
+  }
+
+  # ---------- Security Headers ----------
+  add_header X-Content-Type-Options nosniff;
+  add_header X-Frame-Options SAMEORIGIN;
+  add_header X-XSS-Protection "1; mode=block";
+}
