--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,31 +1,51 @@
-# Health check
-location /health {
-    return 200 "Nginx is healthy ✅\n";
-    add_header Content-Type text/plain;
+worker_processes auto;
+events {
+  worker_connections 1024;
 }
 
-# API proxy — backend eyni konteynerdə 5000 portunda işləyir
-location /api/ {
-    proxy_pass http://127.0.0.1:5000/;
-    proxy_http_version 1.1;
+http {
+  include       mime.types;
+  default_type  application/octet-stream;
+  sendfile      on;
+  keepalive_timeout  65;
 
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-}
+  # Logging (optional)
+  access_log /var/log/nginx/access.log;
+  error_log /var/log/nginx/error.log;
 
-# Frontend (React build) serving
-location / {
-    root /usr/share/nginx/html;
-    index index.html;
-    try_files $uri $uri/ /index.html;
-}
+  server {
+    listen 808;
+    server_name _;
 
-# Cache static assets
-location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot|webm|mp4)$ {
-    root /usr/share/nginx/html;
-    expires 30d;
-    add_header Cache-Control "public, immutable";
-    access_log off;
+    # ---------- Health Check ----------
+    location /health {
+      return 200 "Nginx is healthy ✅\n";
+      add_header Content-Type text/plain;
+    }
+
+    # ---------- API Proxy ----------
+    location /api/ {
+      proxy_pass http://127.0.0.1:5000/;
+      proxy_http_version 1.1;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # ---------- Frontend ----------
+    location / {
+      root /usr/share/nginx/html;
+      index index.html;
+      try_files $uri $uri/ /index.html;
+    }
+
+    # ---------- Static cache ----------
+    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot|webm|mp4)$ {
+      root /usr/share/nginx/html;
+      expires 30d;
+      add_header Cache-Control "public, immutable";
+      access_log off;
+    }
+  }
 }
