--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,5 @@
 worker_processes auto;
+
 events {
   worker_connections 1024;
 }
@@ -6,18 +7,25 @@ events {
 http {
   include       /etc/nginx/mime.types;
   default_type  application/octet-stream;
+  
   sendfile      on;
   keepalive_timeout  65;
+  
+  # Logging
+  access_log /var/log/nginx/access.log;
+  error_log /var/log/nginx/error.log;
 
   server {
-    listen 808;
+    listen ${PORT};
     server_name _;
 
+    # ---------- Health Check ----------
     location /health {
       return 200 "Nginx is healthy ✅\n";
       add_header Content-Type text/plain;
     }
 
+    # ---------- API Proxy ----------
     location /api/ {
       proxy_pass http://127.0.0.1:5000/;
       proxy_http_version 1.1;
@@ -25,14 +33,21 @@ http {
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+      
+      # Timeouts
+      proxy_connect_timeout 60s;
+      proxy_send_timeout 60s;
+      proxy_read_timeout 60s;
     }
 
+    # ---------- Frontend ----------
     location / {
       root /usr/share/nginx/html;
       index index.html;
       try_files $uri $uri/ /index.html;
     }
 
+    # ---------- Static cache ----------
     location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot|webm|mp4)$ {
       root /usr/share/nginx/html;
       expires 30d;
