--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,15 +19,16 @@ http {
     listen ${PORT};
     server_name _;
 
-    # ---------- Health Check ----------
-    location /health {
+    # ---------- Health Check (FIRST) ----------
+    location = /health {
       return 200 "Nginx is healthy ✅\n";
       add_header Content-Type text/plain;
     }
 
-    # ---------- API Proxy ----------
-    location /api/ {
-      proxy_pass http://127.0.0.1:5000/;
+    # ---------- API Proxy (BEFORE frontend) ----------
+    location /api {
+      # Remove trailing slash from proxy_pass to preserve /api in the path
+      proxy_pass http://127.0.0.1:5000;
       proxy_http_version 1.1;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
@@ -40,19 +41,19 @@ http {
       proxy_read_timeout 60s;
     }
 
-    # ---------- Frontend ----------
-    location / {
-      root /usr/share/nginx/html;
-      index index.html;
-      try_files $uri $uri/ /index.html;
-    }
-
-    # ---------- Static cache ----------
+    # ---------- Static cache (BEFORE root) ----------
     location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot|webm|mp4)$ {
       root /usr/share/nginx/html;
       expires 30d;
       add_header Cache-Control "public, immutable";
       access_log off;
+    }
+
+    # ---------- Frontend (LAST - catch all) ----------
+    location / {
+      root /usr/share/nginx/html;
+      index index.html;
+      try_files $uri $uri/ /index.html;
     }
   }
 }
