--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,15 +19,14 @@ http {
     listen ${PORT};
     server_name _;
 
-    # ---------- Health Check (FIRST) ----------
+    # ---------- Health Check ----------
     location = /health {
       return 200 "Nginx is healthy ✅\n";
       add_header Content-Type text/plain;
     }
 
-    # ---------- API Proxy (BEFORE frontend) ----------
+    # ---------- API Proxy - Must come BEFORE location / ----------
     location /api {
-      # Remove trailing slash from proxy_pass to preserve /api in the path
       proxy_pass http://127.0.0.1:5000;
       proxy_http_version 1.1;
       proxy_set_header Host $host;
@@ -35,25 +34,22 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       
-      # Timeouts
       proxy_connect_timeout 60s;
       proxy_send_timeout 60s;
       proxy_read_timeout 60s;
     }
 
-    # ---------- Static cache (BEFORE root) ----------
-    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot|webm|mp4)$ {
-      root /usr/share/nginx/html;
-      expires 30d;
-      add_header Cache-Control "public, immutable";
-      access_log off;
-    }
-
-    # ---------- Frontend (LAST - catch all) ----------
+    # ---------- Frontend for everything else ----------
     location / {
       root /usr/share/nginx/html;
       index index.html;
       try_files $uri $uri/ /index.html;
+      
+      # Cache static assets
+      location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot|webm|mp4)$ {
+        expires 30d;
+        add_header Cache-Control "public, immutable";
+      }
     }
   }
 }
