--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,7 +11,6 @@ http {
   sendfile      on;
   keepalive_timeout  65;
   
-  # Logging
   access_log /var/log/nginx/access.log;
   error_log /var/log/nginx/error.log;
 
@@ -25,7 +24,7 @@ http {
       add_header Content-Type text/plain;
     }
 
-    # ---------- API Proxy - Must come BEFORE location / ----------
+    # ---------- API Proxy ----------
     location /api {
       proxy_pass http://127.0.0.1:5000;
       proxy_http_version 1.1;
@@ -33,23 +32,25 @@ http {
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
-      
+
       proxy_connect_timeout 60s;
       proxy_send_timeout 60s;
       proxy_read_timeout 60s;
     }
 
-    # ---------- Frontend for everything else ----------
+    # ---------- Static assets ----------
+    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot|webm|mp4)$ {
+      root /usr/share/nginx/html;
+      expires 30d;
+      add_header Cache-Control "public, immutable";
+      access_log off;
+    }
+
+    # ---------- Frontend ----------
     location / {
       root /usr/share/nginx/html;
       index index.html;
       try_files $uri $uri/ /index.html;
-      
-      # Cache static assets
-      location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot|webm|mp4)$ {
-        expires 30d;
-        add_header Cache-Control "public, immutable";
-      }
     }
   }
 }
