--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,7 +10,7 @@ http {
   
   sendfile      on;
   keepalive_timeout  65;
-  
+
   access_log /var/log/nginx/access.log;
   error_log /var/log/nginx/error.log;
 
@@ -32,13 +32,9 @@ http {
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
-
-      proxy_connect_timeout 60s;
-      proxy_send_timeout 60s;
-      proxy_read_timeout 60s;
     }
 
-    # ---------- Static assets ----------
+    # ---------- Static cache ----------
     location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot|webm|mp4)$ {
       root /usr/share/nginx/html;
       expires 30d;
