--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,7 +19,7 @@ http {
         server_name _;
         
         # CRITICAL: Set root INSIDE server block
-        root /usr/share/nginx/html;
+        root /usr/share/nginx/html/frontend;
         index index.html;
         
         # Nginx health check
