--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.2"
+    "mongoose": "^8.19.2",
+    "node-cron": "^3.0.3"   ← ✅ bu sətri əlavə elə
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
