--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "express-validator": "^7.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
-    "node-cron": "^3.0.3"   ← ✅ bu sətri əlavə elə
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
